implemented untested data interpolation and averaging